# sudoku_dchequer

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
Sudoku_DCHEQUER.egg-info/: PKG-INFO  SOURCES.txt
src/Sudoku_DCHEQUER.egg-info/: PKG-INFO  SOURCES.txt
src/sudoku/: sudoku-oop.py  sudoku_oop.py
src/sudoku_dchequer.egg-info/: PKG-INFO  SOURCES.txt
