[metadata]
name = Sudoku-DCHEQUER
version = 0.0.5
author = Diego Chequer
author_email = millychequer@gmail.com
description = An Object Oriented Sudoku Game Generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dchequer/sudoku_dchequer
project_urls = 
    Bug Tracker = https://github.com/dchequer/sudoku_dchequer/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src